--- a/design.css
+++ b/design.css
@@ -1,26 +1,22 @@
 body {
     background-color: rgb(24, 17, 46);
-    text-align: center;
     font-family: 'JetBrains Mono', monospace;
     font-size: 14px;
     font-weight: normal;
 }
 
-.header {
+
+
+h1 {
+    text-align: center;
     color: rgb(68, 119, 206);
     font-size: 30px;
     font-weight: bold;
 }
-
-.text {
+h2 {
+    text-align: center;
     color: rgb(140, 171, 255);
+    font-size: 25px;
+    font-weight: bold;
 }
 
-.link {
-    text-decoration: none;
-    color: rgb(11, 112, 87);
-}
-.link:hover {
-    text-decoration: none;
-    color: rgb(9, 75, 59);
-}
